# qt_download_manager

./: .gitignore  CMakeLists.txt  README.md  downloadmanager.cpp  downloadmanager.h  downloadmanagerHTTP.cpp  downloadmanagerHTTP.h  downloadwidget.cpp  downloadwidget.h  form.ui
